fix cropped etext for portrait scans

--- a/css/less/views/scroll-view.less
+++ b/css/less/views/scroll-view.less
@@ -216,7 +216,7 @@
 
   .etext-content {
     box-sizing: border-box;
-    overflow:hidden; 
+    //overflow:hidden; 
     font-family: "Tibetan Machine Uni"; //"Noto Sans Tibetan" ;
     color:black;  
     background:rgba(255,255,255,0.9);
@@ -227,7 +227,7 @@
     word-break: break-all; 
     text-align: center;   
     margin:0 auto;
-    overflow-x:auto;
+    //overflow-x:visible;
     
     &.hide { display:none; }
 
